P5Elearning/force-app/main/default/objects/Question_Answer__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Answer</label>
    <referenceTo>Answer__c</referenceTo>
    <relationshipLabel>Questions_Answers_UUHS</relationshipLabel>
    <relationshipName>Questions_Answers_UUHS</relationshipName>
    <type>Lookup</type>
</CustomField>