P5Elearning/force-app/main/default/objects/Question_Answer__c/fields/Is_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Completed</label>
    <type>Checkbox</type>
</CustomField>