P5Elearning/force-app/main/default/objects/Question_Answer__c/fields/Unit_User_History__c.field-meta.xml
<CustomField>
    <fullName>Unit_User_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit_User_History</label>
    <referenceTo>Unit_User_History__c</referenceTo>
    <relationshipLabel>Questions_Answers_UUHS</relationshipLabel>
    <relationshipName>Questions_Answers_UUHS</relationshipName>
    <type>Lookup</type>
</CustomField>